--- a/punk-api-project/src/components/NavBar/NavBar.module.scss
+++ b/punk-api-project/src/components/NavBar/NavBar.module.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     background-image: $background-gray;
     border-bottom: 3px solid $colour-header;
+    width: 100vw;
 
     h1 {
         color: $colour-header;
