passed props from data file to BeerCard components

--- a/punk-api-project/src/components/BeerCard/BeerCard.module.scss
+++ b/punk-api-project/src/components/BeerCard/BeerCard.module.scss
@@ -11,6 +11,10 @@
         color: $colour-header;
         margin-bottom: 10px;
         text-align: center;
+
+        .BeerCardABV {
+            font-size: 1rem;
+        }
     }
 
     .BeerCardBody {
