--- a/punk-api-project/src/components/BeerCardFull/BeerCardFull.module.scss
+++ b/punk-api-project/src/components/BeerCardFull/BeerCardFull.module.scss
@@ -1,15 +1,14 @@
 @import "../../variables.scss";
 
-.BeerCard {
+.BeerCardFull {
     background-image: $background-gray;
     border-radius: 10px;
-    max-width: 20vw;
+    max-width: 40vw;
     margin: 25px;
     padding: 15px 25px;
 
     h2 {
         color: $colour-header;
-        margin-bottom: 10px;
         text-align: center;
 
         .BeerCardABV {
@@ -33,8 +32,28 @@
         text-align: center;
 
         h4 {
-            margin-bottom: 10px;
+            margin: 10px;
+        }
+
+        p {
+            margin: 5px 0 0;
+        }
+    }
+
+    .BeerCardInfoBox {
+        margin: 20px;
+        display: flex;
+        justify-content: center;
+
+        .BeerCardInfo {
+            margin: 0 30px;
+            background-color: $colour-header;
+            border-radius: 50%;
+            display: flex;
+            flex-direction: column;
+            width: 50px;
+            height: 50px;
+            font-size: 0.75rem;
         }
     }
 }
-
