--- a/punk-api-project/src/components/BeerCardFull/BeerCardFull.module.scss
+++ b/punk-api-project/src/components/BeerCardFull/BeerCardFull.module.scss
@@ -3,7 +3,8 @@
 .BeerCardFull {
     background-image: $background-gray;
     border-radius: 10px;
-    max-width: 40vw;
+    width: 40vw;
+    height: 300px;
     margin: 25px;
     padding: 15px 25px;
 
