--- a/punk-api-project/src/components/BeerCardShort/BeerCardShort.module.scss
+++ b/punk-api-project/src/components/BeerCardShort/BeerCardShort.module.scss
@@ -3,7 +3,7 @@
 .BeerCard {
     background-image: $background-gray;
     border-radius: 10px;
-    max-width: 20vw;
+    width: 350px;
     height: 300px;
     margin: 25px;
     padding: 15px 25px;
