--- a/punk-api-project/src/variables.scss
+++ b/punk-api-project/src/variables.scss
@@ -1,3 +1,6 @@
 $colour-header: #ffc93c;
 
 $background-gray: linear-gradient(#8f8787, #b7b7b7);
+
+$box-shadow-primary: 5px 5px 10px #8f8787;
+$box-shadow-highlight: 5px 5px 10px #ffc93c;
