--- a/punk-api-project/src/App.module.scss
+++ b/punk-api-project/src/App.module.scss
@@ -1,5 +1,9 @@
 @import "./variables.scss";
 
+.Body {
+    min-height: 100%;
+}
+
 .NavBar {
     width: 100vw;
     position: fixed;
@@ -13,4 +17,10 @@
     display: flex;
     flex-wrap: wrap;
     z-index: 0;
+}
+
+.Footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
