--- a/punk-api-project/src/App.module.scss
+++ b/punk-api-project/src/App.module.scss
@@ -2,6 +2,7 @@
 
 .Body {
     min-height: 100%;
+    background-image: url("https://transparenttextures.com/patterns/asfalt-dark.png");
 }
 
 .NavBar {
