--- a/punk-api-project/src/App.module.scss
+++ b/punk-api-project/src/App.module.scss
@@ -14,7 +14,7 @@
 }
 
 .BeerContainer {
-    margin-top: 75px;
+    margin: 85px 45px 0 45px;
     display: flex;
     flex-wrap: wrap;
     z-index: 0;
