--- a/punk-api-project/src/App.module.scss
+++ b/punk-api-project/src/App.module.scss
@@ -14,16 +14,15 @@
     z-index: 1;
 }
 
-// .blur {
-//     width: 100vw;
-//     height: 25px;
-//     top: 75px;
-//     background-color: #eeeeee;
-//     filter: blur(5px);
-//     position: fixed;
-//     z-index: 2;
-//     opacity: 0.75;
-// }
+.blur {
+    width: 100vw;
+    height: 45px;
+    top: 75px;
+    background-image: linear-gradient(to bottom, rgba(238, 238, 238, 1), rgba(238, 238, 238, 0));
+    position: fixed;
+    z-index: 2;
+    opacity: 0.75;
+}
 
 .BeerContainer {
     margin: 85px 45px 0 45px;
