--- a/punk-api-project/src/components/NavBar/NavBar.module.scss
+++ b/punk-api-project/src/components/NavBar/NavBar.module.scss
@@ -7,6 +7,7 @@
     background-image: $background-gray;
     border-bottom: 3px solid $colour-header;
     width: 100vw;
+    height: 75px;
 
     h1 {
         color: $colour-header;
